--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   socket_io_client: ^3.0.0
+  flutter_chat_bubble: ^2.0.2
 
 dev_dependencies:
   flutter_test:
